<resources>
    <string name="app_name">My Portfolio_Project 0</string>
    <string name="action_settings">Settings</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="xyz">XYZ Reader</string>
    <string name="bigger">Build it Bigger</string>
    <string name="capstone">Capstone:My Own App</string>
    <string name="library">Library App</string>
    <string name="nanodegree">"My Nanodegree Apps!</string>
</resources>
